base/000-argocd-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  labels:
    app.kubernetes.io/name: argocd-namespace
    app.kubernetes.io/part-of: argocd
  name: argocd
