base/020-ambassador-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  labels:
    app: argocd-server
  name: argocd-ui-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: ambassador
spec:
  rules:
    - http:
        paths:
          - path: /argocd
            backend:
              serviceName: argocd-server
              servicePort: 8080
